<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="579dp"
        android:layout_height="782dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/fondoolinea" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="94dp"
        android:layout_height="98dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toStartOf="@+id/idCodigoAgregar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/agregar" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="86dp"
        android:layout_height="103dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:onClick="editar"
        app:layout_constraintEnd_toStartOf="@+id/idNombreAgregar"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/editar" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="102dp"
        android:layout_height="118dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="285dp"
        android:onClick="buscar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.428"
        app:srcCompat="@drawable/buscar" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="88dp"
        android:layout_height="100dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:onClick="eliminar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/eliminar" />

    <EditText
        android:id="@+id/idCodigoAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="731dp"
        android:ems="10"
        android:hint="@string/ingreseCodigo"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.859" />

    <EditText
        android:id="@+id/idNombreAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/ingreseNombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/idDesceipcionAgregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idCodigoAgregar"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/idDesceipcionAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/ingreseDescripcion"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/idPrecioAgregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.371" />

    <EditText
        android:id="@+id/idPrecioAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="355dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/IngresePrecio"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.494" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="236dp"
        android:onClick="registrar"
        android:text="@string/BotonGuardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="84dp"
        android:layout_height="103dp"
        android:layout_marginTop="32dp"
        android:onClick="mostrarTodos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/imagepng" />
</android.support.constraint.ConstraintLayout>